# file_manager

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  build.rs  test_chinese.md
BuildApp/Linux/: README.md  build.sh  update.sh
BuildApp/MacOS/: BUILD_README.md  README.md  UPDATE_GUIDE.md  build.sh  build_app.sh  quick_update.sh  update.sh  update_app.sh
BuildApp/Windows/: README.md  build.bat  update.bat
docs/: new_features_guide.md
res/: README.md  app.manifest  app.rc  icon.icns
src/: app.rs  async_ops.rs  config.rs  file_entry.rs  fonts.rs  integration_example.rs  main.rs  plugins.rs  state.rs  test_id_system.rs  theme.rs
