[package]
name = "file_manager"
version = "0.2.1"
edition = "2024"
description = "一个简洁高效的文件快速访问管理器"
authors = ["File Manager Team"]
license = "MIT"
repository = "https://github.com/user/file_manager"
readme = "README.md"
keywords = ["file-manager", "gui", "utility", "productivity"]
categories = ["filesystem", "gui"]

[[bin]]
name = "file_manager"
path = "src/main.rs"

[profile.release]
strip = true
lto = "thin"
codegen-units = 4
panic = "abort"
opt-level = 3


debug = false
incremental = true

[profile.dev]
opt-level = 1

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow"] }
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = { version = "0.12", default-features = false }


[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
